# phasma

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: wheel.yml
examples/: advanced_dynamic_example.py  dynamic_content_example.html  dynamic_content_example.py  form_interaction_example.py  javascript_testing_strategies.py  js_execution_example.py  multi_page_example.py  playwright_like_example.py  scraping_example.py
phasma/: __init__.py  __main__.py  browser.py  phasma.py
phasma/driver/: __init__.py  download.py  driver.py  driver_persistent.py
src/phantomjs_driver/driver/: __init__.py  download.py
src/phasma/: phasma.py
src/phasma/driver/: .gitignore  __init__.py  download.py  driver.py
test_cwd/: test.js
tests/: test_browser_api.py  test_calc.js  test_cli.py  test_comprehensive.py  test_driver.py  test_javascript_dynamic_content.py  test_phasma.py  test_phasma_functions.py  test_simple.js
tests/data/: dynamic.html  test_page.html
